# pre-commit-hooks-changelog

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DECISIONS.md  Dockerfile  GitVersion.yml  Makefile  README.md  changelog.md  changelog.py  cliff.toml  docker-compose.yml  formater.py  generate_changelog.py  pyproject.toml  setup.cfg
.claude/: hookify.block-dangerous-rm.local.md  hookify.block-env-edits.local.md  hookify.block-lockfile-edits.local.md  hookify.warn-french-in-files.local.md  hookify.warn-host-test-lint.local.md  settings.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  actionlint.yaml  auto_assign.yml  copilot-instructions.md  dependabot.yml  labeler.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: action-check.yml  approved-label.yml  auto-assign.yml  auto-update-pre-commit.yml  ci.yml  dependabot-auto-merge.yml  detect-conflicts.yml  labeler.yml  pr-dependencies.yml  pull-request-size.yml  pythonpackage.yml  release.yml  secret-scan.yml  sonar.yml  sync-labels.yml  update-pr-body.yml
changelog/archives/: v0.1.0.md  v0.1.1.md  v0.1.2.md  v0.1.3.md  v0.1.4.md  v0.1.5.md
helper/: markdown.py
pre_commit_hook/: __init__.py  formatter.py  generate_changelog.py  helper.py
tests/: collect_test.py  conftest.py  test_collect.py  test_formatter.py  test_helper.py  test_main.py
tests/tmp/: test_output_file_path_generaticurrent  test_path_generationcurrent
