[metadata]
name = pre_commit_hooks_changelog
version = 0.2.0
description = generate Changelog.md from yaml files in changelog folder
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/chrysa/pre-commit-hooks-changelog
author = Anthony Greau
author_email = greau.anthony@gmail.com
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Programming Language :: Python :: 3.14
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
download_url = $url/archive/$version.tar.gz
keywords =
    pre-commit
    changelog

[options]
packages = find:
python_requires = >=3.9
include_package_data = true
install_requires =
    ruamel.yaml
zip_safe = false

[options.entry_points]
console_scripts =
    generate-changelog = pre_commit_hook.generate_changelog:main

[options.extras_require]
documentation =
    numpydoc>=1.10
    myst-parser>=4.0
    sphinx>=8.0
    sphinx-autobuild>=2025.0
    sphinx-rtd-theme>=3.0
mypy =
    mypy>=1.0
pre_commit =
    PyYAML>=6.0
    pre-commit>=3.7
pypi =
    twine>=5.0
    build>=1.0
ruff =
    ruff>=0.9
tests =
    pytest>=7.0
    pytest-cov>=4.0
    pytest-mock>=3.0

[options.packages.find]
exclude =
    changelog
    docs
    tests*
    testing*

[bdist_wheel]
universal = true

[check]
metadata = true
restructuredtext = true
strict = true

[coverage:html]
directory = reports/coverage

[coverage:paths]
source =
    pre_commit_hook/

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    if __name__ == __main__:
fail_under = 85
precision = 2
show_missing = true
skip_empty = true
skip_covered = true

[coverage:run]
branch = True
source =
    pre_commit_hook/

[tool:pytest]
addopts = --verbose --showlocals --tb=short
console_output_style = progress
junit_family = xunit2
junit_suite_name = pre_commit_hooks_changelog
markers =
    unit
    functional
minversion = 7.0
python_classes = Test*
python_files = test_*.py *_test.py
python_functions = test_*
testpaths = tests

[pep8]
ignore = E501

[flake8]
ban-relative-imports = True
banned-modules = unittest.mock! = use mock.,six.moves.urllib.parse! = use urlparse,{python2to3}
cache = .cache/pytest
count = True
exclude = .git,__pycache__, docs/, build/, dist/
filename = **/*.py
hang-closing = False
select = C,E,F,W,B,B950
ignore = E203, E501, W503
max-complexity = 10
max-line-length = 120
output-file = .flake8.log
launch-source = False
statistics = True
tee = True

[isort]
atomic = True
balanced_wrapping = True
case_sensitive = True
default_section = THIRDPARTY
force_to_top = True
include_trailing_comma = False
known_first_party = pre_commit_hooks_changelog
known_future_library = annotations
length_sort = 1
length_sort_stdlib = True
lines_between_types = 1
line_length = 120
multi_line_output = 0
order_by_type = True
sections = FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY
known_third_party = ruamel,setuptools

[pylint]
output-format = colorized
max-line-length = 120
min-similarity-lines = 4
jobs = 4
persistent = yes
ignore-imports = no
init-import = yes
max-module-lines = 200
max-args = 10
suggestion-mode = yes
disable = C0114,C0330
reports = no
ignore =
    ./docs

[mypy]
check_untyped_defs = True
disallow_any_decorated = False
disallow_any_expr = False
disallow_any_generics = True
disallow_incomplete_defs = True
disallow_subclassing_any = True
disallow_any_unimported = False
disallow_untyped_calls = True
disallow_untyped_decorators = True
disallow_untyped_defs = True
dump_type_stats = True
follow_imports = True
ignore_missing_imports = False
no_implicit_optional = True
no_implicit_reexport = True
no_strict_optional = True
pretty = True
python_version = 3.9
show_absolute_path = True
show_column_numbers = True
show_error_codes = True
show_error_context = True
warn_redundant_casts = True
warn_return_any = False
warn_unreachable = True
warn_unused_configs = True
warn_unused_ignores = True

[mypy-pre_commit_hooks_changelog.*]
pdb = True
no_incremental = False
show_traceback = True

[mypy-docs*]
ignore_errors = True

[mypy-tests.*]
check_untyped_defs = False
disallow_untyped_calls = False
disallow_untyped_defs = False
follow_imports_for_stubs = True
ignore_missing_imports = True
no_incremental = True
show_traceback = False
warn_no_return = False
